[JAVA-4584] Testing